src-k8s/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: load-ingress
  namespace: project
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: load.dummy-blue-green.ga
    http:
      paths:      
        - backend:
            serviceName: load-service
            servicePort: 3000
